# camera

./: .gitignore  Makefile  Makefile.am  README  WebUI.sln  autogen.sh  configure.ac  runme.sh
WebUI/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  ErrorException.aspx  ErrorException.aspx.cs  ErrorException.aspx.designer.cs  ErrorUnknown.aspx  ErrorUnknown.aspx.cs  ErrorUnknown.aspx.designer.cs  Global.asax  Global.asax.cs  Login.aspx  Login.aspx.cs  Login.aspx.designer.cs  Logout.aspx  Logout.aspx.cs  Logout.aspx.designer.cs  Site.Master  Site.Master.cs  Site.Master.designer.cs  WebUI.csproj  web.config
WebUI.Code/: AppHandler.cs  AppMasterPage.cs  AppPage.cs  AppUserControl.cs  CameraClientException.cs  CameraClientExt.cs  JScript.Designer.cs  JScript.resx  Util.cs  WebUI.Code.csproj
WebUI.Code/JScript/: NumberBox.js
WebUI.Code/Properties/: AssemblyInfo.cs
WebUI.Code/Providers/: CameraMemberShipProvider.cs  CameraRoleProvider.cs
WebUI.Code/WebControls/: BoundYesNo.cs  ButtonFieldConfirm.cs  EMailValidator.cs  MaxLengthValidator.cs  NumberBox.cs  NumberBoxValidator.cs  SaneValidator.cs
WebUI/Admin/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  UserAdd.aspx  UserAdd.aspx.cs  UserAdd.aspx.designer.cs  UserEdit.aspx  UserEdit.aspx.cs  UserEdit.aspx.designer.cs  UserView.aspx  UserView.aspx.cs  UserView.aspx.designer.cs  Users.aspx  Users.aspx.cs  Users.aspx.designer.cs  web.config
WebUI/App_Themes/Default/: Skin.skin  StyleSheet.css
WebUI/Config/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  web.config
WebUI/Config/Network/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  RTSP.aspx  RTSP.aspx.cs  RTSP.aspx.designer.cs  WebServer.aspx  WebServer.aspx.cs  WebServer.aspx.designer.cs
WebUI/Config/Sys/: Debug.aspx  Debug.aspx.cs  Debug.aspx.designer.cs  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Performance.aspx  Performance.aspx.cs  Performance.aspx.designer.cs  Service.aspx  Service.aspx.cs  Service.aspx.designer.cs
WebUI/Config/System/: Default.aspx.cs  Performance.aspx  Performance.aspx.cs  Performance.aspx.designer.cs  Service.aspx  Service.aspx.cs  Service.aspx.designer.cs
WebUI/Config/VideoInput/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  NoInputs.aspx  NoInputs.aspx.cs  NoInputs.aspx.designer.cs
WebUI/Controls/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  VideoView.ascx  VideoView.ascx.cs  VideoView.ascx.designer.cs
WebUI/Users/: ChangePassword.aspx  ChangePassword.aspx.cs  ChangePassword.aspx.designer.cs  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  LiveView.aspx  LiveView.aspx.cs  LiveView.aspx.designer.cs  VideoStream.ashx  VideoStream.ashx.cs  web.config
cameractl/: GPIOOutput.cpp  GPIOOutput.h  Makefile.am  Misc.cpp  Misc.h  Rtsp.cpp  Rtsp.h  System.cpp  System.h  User.cpp  User.h  VideoInput.cpp  VideoInput.h  VideoOutput.cpp  VideoOutput.h  WebServer.cpp  WebServer.h  WebStream.cpp  WebStream.h  cameractl.cpp  cameractl.h
libcameraclient/: .gitignore  CameraClient.cpp  CameraClient.h  CameraClient.i  CameraClientException.cpp  CameraClientException.h  Makefile  Makefile.am  README  StatsInfo.h  libcameraclient.h  libcameraclient.i
libcameracommon/: Makefile.am  StatsDetails.cpp  StatsDetails.h  UserItem.cpp  UserItem.h  VideoInputConfig.cpp  VideoInputConfig.h  VideoInputSupported.cpp  VideoInputSupported.h  VideoOutputConfig.cpp  VideoOutputConfig.h  VideoOutputSupported.cpp  VideoOutputSupported.h  VideoOutputTour.cpp  VideoOutputTour.h  VideoOutputTourItem.cpp  VideoOutputTourItem.h  WebStreamOptions.cpp  WebStreamOptions.h  WebStreamType.h
scripts/: DebugGetEnabled.cpp  DebugSetEnabled.cpp  Makefile  Ping.cpp  Quit.cpp  RTSPGetClientCount.cpp  RTSPGetMaxBacklog.cpp  RTSPGetMaxClients.cpp  RTSPGetPort.cpp  RTSPKickAll.cpp  RTSPSetMaxBacklog.cpp  RTSPSetMaxClients.cpp  RTSPSetPort.cpp  SystemReboot.cpp  SystemShutdown.cpp  Version.cpp  VideoInputCount.cpp  VideoInputGetEnabled.cpp  VideoInputSetEnabled.cpp  VideoStreamCount.cpp  VideoStreamGetEnabled.cpp  VideoStreamSetEnabled.cpp  WebServerGetEnabled.cpp  WebServerGetPort.cpp  WebServerRestart.cpp  WebServerSetEnabled.cpp  WebServerSetPort.cpp
server/: Camera.cpp  CameraHandler.cpp  CameraHandler.h  CameraServer.cpp  CameraServerFunctions.gperf  Config.cpp  Debug.cpp  Group.cpp  GstUtil.cpp  Makefile  Makefile.Rules  PipelineBasic.cpp  RTSPHandler.h  RTSPServer.cpp  RTSPServerCleanup.cpp  RTSPServerCleanup.h  System.cpp  User.cpp  Version.cpp  VideoStreamConfig.cpp  VideoStreamSupported.cpp  WebServer.cpp  main.cpp  main.h
server/Platform/: Example.cpp  Platform.cpp  Platform.h  PlatformBase.cpp
server/Platform/Example/: Example.cpp
server/include/: Camera.h  CameraHandler.h  CameraServer.h  Config.h  Debug.h  Group.h  GstUtil.h  IPipeline.h  PipelineBasic.h  RTSPServer.h  RTSPServerCleanup.h  System.h  User.h  UserItem.h  VideoStreamConfig.h  VideoSupported.h  WebServer.h  WebServerProcess.h
server/include/Platform/: Example.h  PlatformBase.h
src/: Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h  CameraServer.cpp  CameraServer.h  CameraServerFunctions.gperf  Config.cpp  GPIOOutputTimer.cpp  GPIOOutputTimer.h  Group.cpp  GstLogger.cpp  GstLogger.h  Makefile.am  PipelineBasic.cpp  PipelineBasic.h  RTSPServer.cpp  RTSPServer.h  RTSPServerCleanup.cpp  StatsDetails.cpp  System.cpp  System.h  User.cpp  User.h  UserItem.cpp  UserItem.h  UserScopedLock.cpp  UserScopedLock.h  VideoInputConfig.h  VideoInputSupported.h  WebServer.cpp  WebServer.h  WebStream.cpp  WebStream.h  WebStreamOptions.cpp  WebStreamOptions.h  WebStreamPipe.cpp  WebStreamPipe.h  WebStreamPipeline.cpp  WebStreamPipeline.h  (+1 more)
src/include/: Version.h  VideoStreamSupported.h
www/: index.js  package.json  sessions.db
www/public/: style.css  style.styl
www/views/: layout.jade  live.jade  login.jade
